[gd_scene load_steps=5 format=3 uid="uid://tr141j3qjva"]

[ext_resource type="Script" uid="uid://kp5yqbiub7oq" path="res://scripts/classes/fishing_minigame.gd" id="1_atuv8"]
[ext_resource type="Resource" uid="uid://bxlx5j5i2ljcm" path="res://carp.tres" id="2_y0pwh"]
[ext_resource type="Resource" uid="uid://cugr2ygq2aqdr" path="res://basic_pole.tres" id="3_03kqu"]
[ext_resource type="Texture2D" uid="uid://c6v1t2b2mk4b5" path="res://assets/items/fish arapaima.png" id="4_y0pwh"]

[node name="FishingMinigame" type="CanvasLayer"]
script = ExtResource("1_atuv8")
fish = ExtResource("2_y0pwh")
rod = ExtResource("3_03kqu")

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="catchArea" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -44.0
offset_right = 54.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="bar_track" type="ColorRect" parent="Control/catchArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -259.5
offset_right = 38.0
offset_bottom = 259.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.38931385, 0.48302835, 0.21122715, 1)
metadata/_edit_use_anchors_ = true

[node name="catchBar" type="ColorRect" parent="Control/catchArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = -0.04763638
anchor_right = 0.509
anchor_bottom = 0.31599998
offset_left = -38.981
offset_top = 184.192
offset_right = 37.019
offset_bottom = 238.192
color = Color(0, 1.4635127, 0.3952982, 1)
metadata/_edit_use_anchors_ = true

[node name="fishIcon" type="TextureRect" parent="Control/catchArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48202753
anchor_top = 0.8525455
anchor_right = 0.48202753
anchor_bottom = 0.8525455
offset_left = -38.041
offset_top = -13.024
offset_right = 37.959
offset_bottom = 12.976
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_y0pwh")
metadata/_edit_use_anchors_ = true

[node name="progress" type="ProgressBar" parent="Control/catchArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 102.5
offset_top = 299.8897
offset_right = 612.8897
offset_bottom = 335.8897
rotation = -1.5707964
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="treasureIcon" type="TextureRect" parent="Control/catchArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.6363636
anchor_right = 0.55
anchor_bottom = -1.547
offset_left = -39.0
offset_top = 27.0
offset_right = 44.55
offset_bottom = 42.136
metadata/_edit_use_anchors_ = true

[node name="LabelFishName" type="Label" parent="Control/catchArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 12.5
offset_top = -270.0
offset_right = 133.5
offset_bottom = -241.0
metadata/_edit_use_anchors_ = true

[node name="SFX" type="AudioStreamPlayer" parent="Control/catchArea"]
unique_name_in_owner = true

[node name="SFX2" type="AudioStreamPlayer" parent="Control/catchArea"]
unique_name_in_owner = true

[node name="SFX3" type="AudioStreamPlayer" parent="Control/catchArea"]
unique_name_in_owner = true
